--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@supabase/supabase-js": "^2.39.7",
     "nestjs-resend": "^0.0.3",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
