--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "launch": "npm run build && npm start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.657.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
